--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
     "expo": "~43.0.2",
@@ -24,6 +25,7 @@
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.1",
+    "react-navigation-header-buttons": "^6.3.1",
     "react-navigation-stack": "^2.10.4",
     "react-navigation-tabs": "^2.11.1"
   },
